The white space on the right fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
 body{
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
+    margin-right: 0px;
     font-family: Verdana, sans-serif;
 }
+a {
+  text-decoration: none;
+}
+
 address {
   display: block;
   font-style: italic;
+  font-family: Verdana, sans-serif;
 }
 ul {
     list-style-type: none;
@@ -35,19 +41,19 @@ ul {
   }
 
 .icon{
+  margin-right: 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     background-color: #670F4C;
     color: white;
-    width: 100%;
     height: 2%;
 }
 
 .booking{
-  height: 600px;
   width: 100%;
+  height: 600px;
   background-image: url("../images/background.jpg");
   background-size: 100% 100%;
   display: flex;
@@ -84,7 +90,6 @@ ul {
 .site-deals{
   display: flex;
   flex-direction: row;
-  width: 100%;
   height: 300px;
   margin-left: 60px;
 }
@@ -112,4 +117,11 @@ ul {
 
 .image-link{
   text-decoration: none;
+}
+
+.footer{
+  background-color: #361F33;
+  height: 20%;
+  padding: 20px;
+  color: white;
 }
